--- a/Clinic/pom.xml
+++ b/Clinic/pom.xml
@@ -50,6 +50,13 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>3.17</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.28.0-GA</version>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
